--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Code Quiz</title>
+        <link rel="stylesheet" href="./assets/css/style.css"/>
     </head>
 
 
 
     <body>
+        <h1>Coding Quiz Challenge</h1>
+            <p>Try to answer the following code-related questions within the limit. Keep in mind that incorrect answers will penalize your score time by 15 seconds</p>
 
 
 
