added timer class

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="scores">
                 <a id="highscores-list">View High Scores</a>
             </div>
-            <div id="time" class="time">
+            <div id="timer" class="timer">
                 Time: 75
             </div>
 
